[project]
name = "nvitop-monitor"
version = "0.1.0"
description = "GPU Nvidia monitoring program using nvitop"
requires-python = ">=3.11"
dependencies = [
    "gpustat>=1.1.1",
    "gputil>=1.4.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "nvidia-ml-py>=13.580.65",
    "nvitop>=1.3.0",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "py3nvml>=0.2.7",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0", 
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
